--- a/aspnetcore/migration/21-to-22.md
+++ b/aspnetcore/migration/21-to-22.md
@@ -4,56 +4,58 @@ author: scottaddie
 description: Cet article décrit les conditions préalables et les étapes courantes pour la migration d’un projet ASP.NET Core 2.1 vers ASP.NET Core 2.2.
 ms.author: scaddie
 ms.custom: mvc
-ms.date: 12/18/2018
+ms.date: 12/27/2018
 uid: migration/21-to-22
-ms.openlocfilehash: 4a8d5c21e973377b7185b3d6f39b4eb76707afd2
-ms.sourcegitcommit: 3e94d192b2ed9409fe72e3735e158b333354964c
+ms.openlocfilehash: aea7e7b7e8de4bc2f1769e7aca278748164eb1ba
+ms.sourcegitcommit: e1cc4c1ef6c9e07918a609d5ad7fadcb6abe3e12
 ms.translationtype: MT
 ms.contentlocale: fr-FR
-ms.lasthandoff: 12/31/2018
-ms.locfileid: "53637520"
+ms.lasthandoff: 01/03/2019
+ms.locfileid: "53997173"
 ---
-# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="cc13c-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="cc13c-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
+# <a name="migrate-from-aspnet-core-21-to-22"></a><span data-ttu-id="14da2-103">Migrer d’ASP.NET Core 2.1 vers 2.2</span><span class="sxs-lookup"><span data-stu-id="14da2-103">Migrate from ASP.NET Core 2.1 to 2.2</span></span>
 
-<span data-ttu-id="cc13c-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="cc13c-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
+<span data-ttu-id="14da2-104">Par [Scott Addie](https://github.com/scottaddie)</span><span class="sxs-lookup"><span data-stu-id="14da2-104">By [Scott Addie](https://github.com/scottaddie)</span></span>
 
-<span data-ttu-id="cc13c-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="cc13c-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
+<span data-ttu-id="14da2-105">Cet article explique comment mettre à jour d’un projet ASP.NET Core 2.1 existant vers ASP.NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="14da2-105">This article explains how to update an existing ASP.NET Core 2.1 project to ASP.NET Core 2.2.</span></span>
 
 [!INCLUDE[](~/includes/net-core-prereqs-all-2.2.md)]
 
-## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="cc13c-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="cc13c-106">Update Target Framework Moniker (TFM)</span></span>
+## <a name="update-target-framework-moniker-tfm"></a><span data-ttu-id="14da2-106">Mettre à jour le Moniker du Framework cible</span><span class="sxs-lookup"><span data-stu-id="14da2-106">Update Target Framework Moniker (TFM)</span></span>
 
-<span data-ttu-id="cc13c-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="cc13c-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="cc13c-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="cc13c-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
+<span data-ttu-id="14da2-107">Les projets ciblant .NET Core doivent utiliser le [TFM](/dotnet/standard/frameworks#referring-to-frameworks) d’une version supérieure ou égale à .NET Core 2.2.</span><span class="sxs-lookup"><span data-stu-id="14da2-107">Projects targeting .NET Core should use the [TFM](/dotnet/standard/frameworks#referring-to-frameworks) of a version greater than or equal to .NET Core 2.2.</span></span> <span data-ttu-id="14da2-108">Mise à jour le `<TargetFramework>` texte interne du nœud avec `netcoreapp2.2`:</span><span class="sxs-lookup"><span data-stu-id="14da2-108">Update the `<TargetFramework>` node's inner text with `netcoreapp2.2`:</span></span>
 
 ```xml
 <TargetFramework>netcoreapp2.2</TargetFramework>
 ```
 
-<span data-ttu-id="cc13c-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="cc13c-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
+<span data-ttu-id="14da2-109">Les projets ciblant .NET Framework peuvent continuer à utiliser le moniker du Framework cible d’une version supérieure ou égale à .NET Framework 4.6.1 :</span><span class="sxs-lookup"><span data-stu-id="14da2-109">Projects targeting .NET Framework may continue to use the TFM of a version greater than or equal to .NET Framework 4.6.1:</span></span>
 
 ```xml
 <TargetFramework>net461</TargetFramework>
 ```
 
-## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="cc13c-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="cc13c-110">Adopt the IIS in-process hosting model</span></span>
+## <a name="adopt-the-iis-in-process-hosting-model"></a><span data-ttu-id="14da2-110">Adopter le modèle d’hébergement intra-processus IIS</span><span class="sxs-lookup"><span data-stu-id="14da2-110">Adopt the IIS in-process hosting model</span></span>
 
-<span data-ttu-id="cc13c-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="cc13c-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/index#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
+<span data-ttu-id="14da2-111">Pour adopter le [modèle d’hébergement intra-processus pour IIS](xref:fundamentals/servers/index#in-process-hosting-model), ajouter le `<AspNetCoreHostingModel>` propriété avec une valeur de `InProcess` à un `<PropertyGroup>` dans le fichier projet :</span><span class="sxs-lookup"><span data-stu-id="14da2-111">To adopt the [in-process hosting model for IIS](xref:fundamentals/servers/index#in-process-hosting-model), add the `<AspNetCoreHostingModel>` property with a value of `InProcess` to a `<PropertyGroup>` in the project file:</span></span>
 
 ```xml
 <AspNetCoreHostingModel>InProcess</AspNetCoreHostingModel>
 ```
 
-<span data-ttu-id="cc13c-112">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span><span class="sxs-lookup"><span data-stu-id="cc13c-112">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span></span>
+<span data-ttu-id="14da2-112">Pour plus d'informations, consultez <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span><span class="sxs-lookup"><span data-stu-id="14da2-112">For more information, see <xref:host-and-deploy/aspnet-core-module#hosting-models>.</span></span>
 
-## <a name="update-package-references"></a><span data-ttu-id="cc13c-113">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="cc13c-113">Update package references</span></span>
+## <a name="update-package-references"></a><span data-ttu-id="14da2-113">Mettre à jour les références de package</span><span class="sxs-lookup"><span data-stu-id="14da2-113">Update package references</span></span>
 
-<span data-ttu-id="cc13c-114">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="cc13c-114">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="cc13c-115">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="cc13c-115">Inclusion of a `Version` attribute results in the following warning:</span></span>
+<span data-ttu-id="14da2-114">Si vous ciblez .NET Core, supprimez le `Version` attribut pour la référence de métapackage.</span><span class="sxs-lookup"><span data-stu-id="14da2-114">If targeting .NET Core, remove the `Version` attribute for the metapackage reference.</span></span> <span data-ttu-id="14da2-115">Inclusion d’un `Version` attribut entraîne l’avertissement suivant :</span><span class="sxs-lookup"><span data-stu-id="14da2-115">Inclusion of a `Version` attribute results in the following warning:</span></span>
 
 ```console
 A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`. Specifying the version of this package is not recommended. For more information, see https://aka.ms/sdkimplicitrefs
 ```
 
-<span data-ttu-id="cc13c-116">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="cc13c-116">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
+<span data-ttu-id="14da2-116">Pour plus d'informations, consultez <xref:fundamentals/metapackage-app>.</span><span class="sxs-lookup"><span data-stu-id="14da2-116">For more information, see <xref:fundamentals/metapackage-app>.</span></span>
+
+<span data-ttu-id="14da2-117">La référence métapackage doit ressembler à ce qui suit `<PackageReference />` nœud :</span><span class="sxs-lookup"><span data-stu-id="14da2-117">The metapackage reference should resemble the following `<PackageReference />` node:</span></span>
 
 ```xml
 <ItemGroup>
@@ -61,7 +63,7 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-<span data-ttu-id="cc13c-117">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="cc13c-117">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="cc13c-118">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="cc13c-118">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
+<span data-ttu-id="14da2-118">Si vous ciblez .NET Framework, mettre à jour chaque référence de package `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="14da2-118">If targeting .NET Framework, update each package reference's `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="14da2-119">Voici les références de package dans un projet ASP.NET Core 2.2 classique qui ciblent .NET Framework :</span><span class="sxs-lookup"><span data-stu-id="14da2-119">Here are the package references in a typical ASP.NET Core 2.2 project targeting .NET Framework:</span></span>
 
 ```xml
 <ItemGroup>
@@ -73,15 +75,15 @@ A PackageReference to 'Microsoft.AspNetCore.App' specified a Version of `2.2.0`.
 </ItemGroup>
 ```
 
-<span data-ttu-id="cc13c-119">Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="cc13c-119">If referencing the [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) package, update its `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="cc13c-120">Cela génère l’erreur suivante :</span><span class="sxs-lookup"><span data-stu-id="cc13c-120">Failure to do so results in the following error:</span></span>
+<span data-ttu-id="14da2-120">Si le référencement la [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) du package, mettez à jour son `Version` attribut 2.2.0 ou ultérieure.</span><span class="sxs-lookup"><span data-stu-id="14da2-120">If referencing the [Microsoft.AspNetCore.Razor.Design](https://www.nuget.org/packages/Microsoft.AspNetCore.Razor.Design/) package, update its `Version` attribute to 2.2.0 or later.</span></span> <span data-ttu-id="14da2-121">Cela génère l’erreur suivante :</span><span class="sxs-lookup"><span data-stu-id="14da2-121">Failure to do so results in the following error:</span></span>
 
 ```console
 Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.2. Reference the package directly from the project to select a different version.
 ```
 
-## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="cc13c-121">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="cc13c-121">Update .NET Core SDK version in global.json</span></span>
+## <a name="update-net-core-sdk-version-in-globaljson"></a><span data-ttu-id="14da2-122">Mettre à jour la version du SDK .NET Core dans global.json</span><span class="sxs-lookup"><span data-stu-id="14da2-122">Update .NET Core SDK version in global.json</span></span>
 
-<span data-ttu-id="cc13c-122">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="cc13c-122">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
+<span data-ttu-id="14da2-123">Si votre solution s’appuie sur un [global.json](/dotnet/core/tools/global-json) fichier cibler une version du SDK .NET Core spécifique, de mettre à jour son `version` propriété vers la version 2.2 installée sur votre ordinateur :</span><span class="sxs-lookup"><span data-stu-id="14da2-123">If your solution relies upon a [global.json](/dotnet/core/tools/global-json) file to target a specific .NET Core SDK version, update its `version` property to the 2.2 version installed on your machine:</span></span>
 
 ```json
 {
@@ -91,15 +93,15 @@ Detected package downgrade: Microsoft.AspNetCore.Razor.Design from 2.2.0 to 2.1.
 }
 ```
 
-## <a name="update-launch-settings"></a><span data-ttu-id="cc13c-123">Mettre à jour les paramètres de lancement</span><span class="sxs-lookup"><span data-stu-id="cc13c-123">Update launch settings</span></span>
+## <a name="update-launch-settings"></a><span data-ttu-id="14da2-124">Mettre à jour les paramètres de lancement</span><span class="sxs-lookup"><span data-stu-id="14da2-124">Update launch settings</span></span>
 
-<span data-ttu-id="cc13c-124">Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*).</span><span class="sxs-lookup"><span data-stu-id="cc13c-124">If using Visual Studio Code, update the project's launch settings file (*.vscode/launch.json*).</span></span> <span data-ttu-id="cc13c-125">Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :</span><span class="sxs-lookup"><span data-stu-id="cc13c-125">The `program` path should reference the new TFM:</span></span>
+<span data-ttu-id="14da2-125">Si à l’aide de Visual Studio Code, de mettre à jour le fichier de paramètres de lancement du projet (*.vscode/launch.json*).</span><span class="sxs-lookup"><span data-stu-id="14da2-125">If using Visual Studio Code, update the project's launch settings file (*.vscode/launch.json*).</span></span> <span data-ttu-id="14da2-126">Le `program` chemin d’accès doit référencer le nouveau moniker du Framework cible :</span><span class="sxs-lookup"><span data-stu-id="14da2-126">The `program` path should reference the new TFM:</span></span>
 
 [!code-json[](21-to-22/samples/launch.json?highlight=10)]
 
-## <a name="call-configurekestrel-instead-of-usekestrel"></a><span data-ttu-id="cc13c-126">Appelez ConfigureKestrel au lieu de UseKestrel</span><span class="sxs-lookup"><span data-stu-id="cc13c-126">Call ConfigureKestrel instead of UseKestrel</span></span>
+## <a name="call-configurekestrel-instead-of-usekestrel"></a><span data-ttu-id="14da2-127">Appelez ConfigureKestrel au lieu de UseKestrel</span><span class="sxs-lookup"><span data-stu-id="14da2-127">Call ConfigureKestrel instead of UseKestrel</span></span>
 
-<span data-ttu-id="cc13c-127">Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateWebHostBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` à la place pour éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):</span><span class="sxs-lookup"><span data-stu-id="cc13c-127">If the app calls <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> in the `CreateWebHostBuilder` method of the `Program` class, call `ConfigureKestrel` instead to avoid conflicts with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model):</span></span>
+<span data-ttu-id="14da2-128">Si l’application appelle <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> dans le `CreateWebHostBuilder` méthode de la `Program` classe, appelez `ConfigureKestrel` à la place pour éviter les conflits avec la [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model):</span><span class="sxs-lookup"><span data-stu-id="14da2-128">If the app calls <xref:Microsoft.AspNetCore.Hosting.WebHostBuilderKestrelExtensions.UseKestrel*> in the `CreateWebHostBuilder` method of the `Program` class, call `ConfigureKestrel` instead to avoid conflicts with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model):</span></span>
 
 ```csharp
 public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
@@ -111,43 +113,43 @@ public static IWebHostBuilder CreateWebHostBuilder(string[] args) =>
         });
 ```
 
-<span data-ttu-id="cc13c-128">Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span><span class="sxs-lookup"><span data-stu-id="cc13c-128">For more information, see <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span></span>
+<span data-ttu-id="14da2-129">Pour plus d'informations, consultez <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span><span class="sxs-lookup"><span data-stu-id="14da2-129">For more information, see <xref:fundamentals/servers/kestrel#how-to-use-kestrel-in-aspnet-core-apps>.</span></span>
 
-## <a name="update-compatibility-version"></a><span data-ttu-id="cc13c-129">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="cc13c-129">Update compatibility version</span></span>
+## <a name="update-compatibility-version"></a><span data-ttu-id="14da2-130">Version de compatibilité de mise à jour</span><span class="sxs-lookup"><span data-stu-id="14da2-130">Update compatibility version</span></span>
 
-<span data-ttu-id="cc13c-130">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="cc13c-130">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
+<span data-ttu-id="14da2-131">Mettre à jour la version de compatibilité dans `Startup.ConfigureServices` à `Version_2_2`:</span><span class="sxs-lookup"><span data-stu-id="14da2-131">Update the compatibility version in `Startup.ConfigureServices` to `Version_2_2`:</span></span>
 
 ```csharp
 services.AddMvc()
         .SetCompatibilityVersion(CompatibilityVersion.Version_2_2);
 ```
 
-## <a name="update-cors-policy"></a><span data-ttu-id="cc13c-131">Mettre à jour la stratégie CORS</span><span class="sxs-lookup"><span data-stu-id="cc13c-131">Update CORS policy</span></span>
+## <a name="update-cors-policy"></a><span data-ttu-id="14da2-132">Mettre à jour la stratégie CORS</span><span class="sxs-lookup"><span data-stu-id="14da2-132">Update CORS policy</span></span>
 
-<span data-ttu-id="cc13c-132">Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="cc13c-132">In ASP.NET Core 2.2, the CORS middleware responds with a wildcard origin (`*`) if a policy allows any origin and allows credentials.</span></span> <span data-ttu-id="cc13c-133">Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS.</span><span class="sxs-lookup"><span data-stu-id="cc13c-133">Credentials aren't supported when a wildcard origin (`*`) is specified, and browsers will disallow the CORS request.</span></span> <span data-ttu-id="cc13c-134">Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span><span class="sxs-lookup"><span data-stu-id="cc13c-134">For more information, including options for correcting the problem on the client, see the [MDN web docs](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span></span>
+<span data-ttu-id="14da2-133">Dans ASP.NET Core 2.2, l’intergiciel (middleware) CORS répond avec une origine de caractère générique (`*`) si une stratégie autorise toute origine et informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="14da2-133">In ASP.NET Core 2.2, the CORS middleware responds with a wildcard origin (`*`) if a policy allows any origin and allows credentials.</span></span> <span data-ttu-id="14da2-134">Informations d’identification ne sont pas pris en charge lors d’une origine de caractère générique (`*`) est spécifié, et les navigateurs interdira la demande CORS.</span><span class="sxs-lookup"><span data-stu-id="14da2-134">Credentials aren't supported when a wildcard origin (`*`) is specified, and browsers will disallow the CORS request.</span></span> <span data-ttu-id="14da2-135">Pour plus d’informations, notamment des options permettant de corriger le problème sur le client, consultez le [docs de web MDN](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span><span class="sxs-lookup"><span data-stu-id="14da2-135">For more information, including options for correcting the problem on the client, see the [MDN web docs](https://developer.mozilla.org/docs/Web/HTTP/CORS/Errors/CORSNotSupportingCredentials).</span></span>
 
-<span data-ttu-id="cc13c-135">Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :</span><span class="sxs-lookup"><span data-stu-id="cc13c-135">To correct this problem on the server, take one of the following actions:</span></span>
+<span data-ttu-id="14da2-136">Pour corriger ce problème sur le serveur, effectuez l’une des actions suivantes :</span><span class="sxs-lookup"><span data-stu-id="14da2-136">To correct this problem on the server, take one of the following actions:</span></span>
 
-* <span data-ttu-id="cc13c-136">Modifier la stratégie CORS pour ne plus autoriser les informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="cc13c-136">Modify the CORS policy to no longer allow credentials.</span></span> <span data-ttu-id="cc13c-137">Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.</span><span class="sxs-lookup"><span data-stu-id="cc13c-137">That is, remove the call to <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> when configuring the policy.</span></span>
-* <span data-ttu-id="cc13c-138">Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés.</span><span class="sxs-lookup"><span data-stu-id="cc13c-138">If credentials are required for the CORS request to succeed, modify the policy to specify allowed hosts.</span></span> <span data-ttu-id="cc13c-139">Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span><span class="sxs-lookup"><span data-stu-id="cc13c-139">For example, use `builder.WithOrigins("https://api.example1.com", "https://example2.com")` instead of using <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span></span>
+* <span data-ttu-id="14da2-137">Modifier la stratégie CORS pour ne plus autoriser les informations d’identification.</span><span class="sxs-lookup"><span data-stu-id="14da2-137">Modify the CORS policy to no longer allow credentials.</span></span> <span data-ttu-id="14da2-138">Autrement dit, supprimez l’appel à <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> lors de la configuration de la stratégie.</span><span class="sxs-lookup"><span data-stu-id="14da2-138">That is, remove the call to <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowCredentials*> when configuring the policy.</span></span>
+* <span data-ttu-id="14da2-139">Si les informations d’identification sont requises pour la demande CORS réussisse, modifiez la stratégie pour spécifier les hôtes autorisés.</span><span class="sxs-lookup"><span data-stu-id="14da2-139">If credentials are required for the CORS request to succeed, modify the policy to specify allowed hosts.</span></span> <span data-ttu-id="14da2-140">Par exemple, utilisez `builder.WithOrigins("https://api.example1.com", "https://example2.com")` au lieu d’utiliser <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span><span class="sxs-lookup"><span data-stu-id="14da2-140">For example, use `builder.WithOrigins("https://api.example1.com", "https://example2.com")` instead of using <xref:Microsoft.AspNetCore.Cors.Infrastructure.CorsPolicyBuilder.AllowAnyOrigin*>.</span></span>
 
-## <a name="update-docker-images"></a><span data-ttu-id="cc13c-140">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="cc13c-140">Update Docker images</span></span>
+## <a name="update-docker-images"></a><span data-ttu-id="14da2-141">Mettre à jour des images Docker</span><span class="sxs-lookup"><span data-stu-id="14da2-141">Update Docker images</span></span>
 
-<span data-ttu-id="cc13c-141">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="cc13c-141">The following table shows the Docker image tag changes:</span></span>
+<span data-ttu-id="14da2-142">Le tableau suivant montre l’image Docker de modifications de la balise :</span><span class="sxs-lookup"><span data-stu-id="14da2-142">The following table shows the Docker image tag changes:</span></span>
 
-| <span data-ttu-id="cc13c-142">2.1</span><span class="sxs-lookup"><span data-stu-id="cc13c-142">2.1</span></span>                                       | <span data-ttu-id="cc13c-143">2.2</span><span class="sxs-lookup"><span data-stu-id="cc13c-143">2.2</span></span>                                       |
+| <span data-ttu-id="14da2-143">2.1</span><span class="sxs-lookup"><span data-stu-id="14da2-143">2.1</span></span>                                       | <span data-ttu-id="14da2-144">2.2</span><span class="sxs-lookup"><span data-stu-id="14da2-144">2.2</span></span>                                       |
 | ----------------------------------------- | ----------------------------------------- |
 | `microsoft/dotnet:2.1-aspnetcore-runtime` | `microsoft/dotnet:2.2-aspnetcore-runtime` |
 | `microsoft/dotnet:2.1-sdk`                | `microsoft/dotnet:2.2-sdk`                |
 
-<span data-ttu-id="cc13c-144">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="cc13c-144">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
+<span data-ttu-id="14da2-145">Modifier le `FROM` lignes dans votre *Dockerfile* à utiliser les nouvelles balises d’image dans la colonne 2.2 de la table précédente.</span><span class="sxs-lookup"><span data-stu-id="14da2-145">Change the `FROM` lines in your *Dockerfile* to use the new image tags in the preceding table's 2.2 column.</span></span>
 
-## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a><span data-ttu-id="cc13c-145">Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement</span><span class="sxs-lookup"><span data-stu-id="cc13c-145">Build manually in Visual Studio when using IIS in-process hosting</span></span>
+## <a name="build-manually-in-visual-studio-when-using-iis-in-process-hosting"></a><span data-ttu-id="14da2-146">Créer manuellement dans Visual Studio lorsque vous utilisez IIS dans le processus d’hébergement</span><span class="sxs-lookup"><span data-stu-id="14da2-146">Build manually in Visual Studio when using IIS in-process hosting</span></span>
 
-<span data-ttu-id="cc13c-146">De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model).</span><span class="sxs-lookup"><span data-stu-id="cc13c-146">Visual Studio's **Auto build on browser request** experience doesn't function with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model).</span></span> <span data-ttu-id="cc13c-147">Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement.</span><span class="sxs-lookup"><span data-stu-id="cc13c-147">You must manually rebuild the project when using in-process hosting.</span></span> <span data-ttu-id="cc13c-148">Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="cc13c-148">Improvements to this experience are planned for a future release of Visual Studio.</span></span>
+<span data-ttu-id="14da2-147">De Visual Studio **la génération automatique de demande de navigateur** expérience ne fonctionne pas avec le [IIS dans le processus modèle d’hébergement](xref:fundamentals/servers/index#in-process-hosting-model).</span><span class="sxs-lookup"><span data-stu-id="14da2-147">Visual Studio's **Auto build on browser request** experience doesn't function with the [IIS in-process hosting model](xref:fundamentals/servers/index#in-process-hosting-model).</span></span> <span data-ttu-id="14da2-148">Vous devez manuellement regénérer le projet lors de l’utilisation dans le processus d’hébergement.</span><span class="sxs-lookup"><span data-stu-id="14da2-148">You must manually rebuild the project when using in-process hosting.</span></span> <span data-ttu-id="14da2-149">Améliorations apportées à cette expérience sont prévues pour une future version de Visual Studio.</span><span class="sxs-lookup"><span data-stu-id="14da2-149">Improvements to this experience are planned for a future release of Visual Studio.</span></span>
 
-## <a name="additional-resources"></a><span data-ttu-id="cc13c-149">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="cc13c-149">Additional resources</span></span>
+## <a name="additional-resources"></a><span data-ttu-id="14da2-150">Ressources supplémentaires</span><span class="sxs-lookup"><span data-stu-id="14da2-150">Additional resources</span></span>
 
 * <xref:mvc/compatibility-version>
 * <xref:fundamentals/metapackage-app>
-* [<span data-ttu-id="cc13c-150">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="cc13c-150">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
+* [<span data-ttu-id="14da2-151">Références de package implicites</span><span class="sxs-lookup"><span data-stu-id="14da2-151">Implicit package references</span></span>](/dotnet/core/tools/csproj#implicit-package-references)
